x/ingress/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: keycloak.example.com
    http:
      paths:
      - path: /realms/TTB/protocol/openid-connect/token
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
